# jupyter-haskell

./: .gitignore  .travis.yml  README.md  circle.yml  jupyter.cabal  stack.yaml
examples/basic/: Main.hs
examples/calculator/: Main.hs
examples/calculator/Calculator/: Handler.hs
examples/client-kernel-info/: Main.hs
examples/stdin/: Main.hs
python/: ensure_haddock_coverage.py  requirements.txt  tests.py
src/Jupyter/: Client.hs  Install.hs  Kernel.hs  Messages.hs  UUID.hs  ZeroMQ.hs
src/Jupyter/Install/: Internal.hs
src/Jupyter/Kernel/: Parser.hs  ZeroMQ.hs
src/Jupyter/Messages/: Internal.hs  Metadata.hs
tests/: Test.hs  Utils.hs
tests/Jupyter/Test/: Client.hs  Install.hs  Kernel.hs  MessageExchange.hs  Utils.hs  ZeroMQ.hs
